--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghx-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,5 +20,9 @@
     "inquirer": "^7.3.3",
     "ora": "^5.0.0",
     "download-git-repo": "^3.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Gao-Hongxiang/ghx-cli.git"
   }
 }
